--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.3",
@@ -25,6 +24,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2"
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@sveltejs/adapter-node": "^1.3.1"
   }
 }
